Update render.yaml to explicitly force Docker runtime

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,9 @@ services:
     plan: free
     dockerfilePath: ./Dockerfile
     dockerContext: .
+    dockerCommand: ""
+    buildCommand: ""
+    startCommand: ""
     envVars:
       - key: PORT
         value: 5000
@@ -14,4 +17,5 @@ services:
         sync: false  # Set this in Render dashboard
     healthCheckPath: /api/health
     autoDeploy: true
+
 
